--- a/pb_phase2.ipynb
+++ b/pb_phase2.ipynb
@@ -1,10 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Install the findspark using the pip install findspark before start"
+    "#########Install the findspark using the pip install findspark before start"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "Initalize some libraries like pandas, seaborn and matplot lib is for plotting and visualization "
+    "#########Initalize some libraries like pandas, seaborn and matplot lib is for plotting and visualization "
    ]
   },
   {
